@@ -10,6 +10,9 @@ News
 SQLObject 0.11.3
 ================
 
+* Fixed a bug in col.py and dbconnection.py - if dbEncoding is None suppose
+  it's 'ascii'.
+
 * Fixed a bug in FirebirdConnection.
 
 * A change ported from `SQLObject 0.10.9`_.
